# clinic_database

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  excel.py  pyproject.toml  pytest.ini  requirements.txt
excel_parser/: api_client.py  constants.py  main.py  parser.py  schemas.py
migrations/: env.py
migrations/versions/: 1c171e923eac_add_gender_to_patient.py  25cda874bd2f_initial_revision.py  26b8390b6594_fhfgjh.py  3e3c01235251_add_role_field_to_user_model.py  48ca78099a21_server_initial.py  50635e9260b7_delete_age_field.py  7487d8b4b6c9_add_ill_columns.py  74c39748dbab_make_date_fields_to_str_and_optional.py  92af7aa86b6d_initial_revision.py  98d8176baad3_change_patient_fields_to_bool.py  9e49fec97743_delete_email_field.py  a00dfcdf969e_add_null_options_to_patient_fields.py  a69960d2f250_l.py  bee3b7c8b534_merge_previous_revisions_into_one.py  c9ab5231c7f3_divide_visit_fields_set_default_values_.py  cb83bc5fe862_enhance_ondelete_params.py  d08364452d3a_initial_revision.py  d4f292329bce_fix_user_id_fields.py  d5871867d8de_add_therapist_field.py  f3f0f1ca3fc2_initial_revision.py
src/: base.py  config.py  conftest.py  dao.py  database.py  main.py  utils.py
src/admin/: admin.py  views.py
src/api/: dao.py  exceptions.py  models.py  routers.py  schemas.py  service.py
src/auth/: dao.py  dependencies.py  exceptions.py  models.py  routers.py  schemas.py  service.py  utils.py
src/excel_parser/: api_client.py  constants.py  excel_parser.py  main.py  parser.py  schemas.py
src/patient/: dao.py  (+5 more)
tests/: conftest.py
(+11 files in other folders)
