[tool.black]
line-length = 110
target-version = ['py311']
exclude = '''
    venv/
    tests/
    migrations/
'''

[tool.isort]
profile = "black"
lines_after_imports = 2
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 110

[tool.autoflake]
check_diff = true
imports = ["sqlalchemy", "src", "fastapi", "typing", "auth", "patient", "patient_records"]

[tool.pyright]
include = ["src"]

[tool.poetry]
name = "clinic-database"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.4.2"
asyncpg = "^0.29.0"
email-validator = "^2.1.1"
gunicorn = "^22.0.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
loguru = "^0.7.2"
openpyxl = "^3.1.2"
pre-commit = "^3.7.1"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
pyjwt = "^2.8.0"
pyright = "^1.1.363"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
sentry-sdk = "^2.2.0"
sqladmin = "^0.17.0"
sqlalchemy = "^2.0.30"
uvicorn = "^0.29.0"
itsdangerous = "^2.2.0"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
